# TitanEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  Format.ps1  README.md  RemoveSubmodule.ps1  ResetMeta.ps1
.github/workflows/: cmake_windows.yml
Editor/: CMakeLists.txt
Editor/src/Atlas/: Components.cpp  Components.h  Editor.cpp  EditorLayer.cpp  EditorLayer.h
Editor/src/Atlas/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/: CMakeLists.txt
Engine/src/: TerraEngine.h  Titan.h
Engine/src/Engine/: Test.cpp  Test.h
Engine/src/Terra/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  PCH.h  Window.h
Engine/src/Terra/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Terra/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Engine/src/Titan/: Application.cpp  Application.h  Core.h  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MathLog.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PCH.h  Window.h  nanosvg_impl.cpp
Engine/src/Titan/Core/: Application.cpp  Application.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MathLogExtension.h  MouseButtons.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Engine/src/Titan/Debug/: Instrumentor.h  Macros.h
Engine/src/Titan/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Titan/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Titan/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/src/Titan/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GeometryRenderer.cpp  GeometryRenderer.h  GraphicsContext.h  Material.h  Mesh.cpp  Mesh.h  PBRRenderer.cpp  PBRRenderer.h  RenderCommand.cpp  RenderCommand.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Engine/src/Titan/Scene/: Assets.h  Components.h  Entity.cpp  Entity.h  PhysicsMaterial.cpp  PhysicsMaterial.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Engine/src/Titan/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Engine/src/Titan/Utils/: Math.cpp  Math.h  PlatformUtils.h  String.h
Runtime/: imgui.ini
Runtime/assets/models/: circle.blend  circle.mtl  sphere.mtl
Runtime/assets/physics/: Circle.phys2d
Runtime/assets/scenes/: Cube.titan  Helmet.titan  Models.titan  PBR.titan  Physics.titan  PixelArt.titan  Player.titan  Scripts.titan  Shadows.titan  Sponza.titan  TextureTest.titan
Runtime/assets/scripts/: CMakeLists.txt  Camera.cs  Player.cs  Rotate.cs  Rotate3D.cs  Test.cs
Runtime/assets/shader/: Mesh.slang  RendererCircle.glsl  RendererCircle.slang  RendererGeometry.slang  RendererLine.glsl  RendererLine.slang  RendererPBR.slang  RendererQuad.glsl  RendererQuad.slang  texture.glsl
Runtime/assets/textures/Ground/: Ground041_2K-PNG.blend  Ground041_2K-PNG.mtlx  Ground041_2K-PNG.tres  Ground041_2K-PNG.usdc
Runtime/assets/textures/Helmet/: seperate.py
Runtime/scenes/: Cube.titan  Example.scene
Runtime/shader/: color.glsl  texture.glsl
Runtime/shaders/: texture.glsl
Sandbox/: CMakeLists.txt
Sandbox/src/Sandbox/: Application.cpp  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h
Script-Core/: CMakeLists.txt
Script-Core/src/: Camera.cs  Main.cs  Player.cs
Script-Core/src/Titan/: Input.cs  InternalCalls.cs  KeyCodes.cs  Log.cs  Vector2.cs  Vector3.cs
Script-Core/src/Titan/Scene/: Components.cs  Entity.cs
Scripts/: Build.bat  Configure.bat
